fix dark mode prefers-color-scheme is set to dark

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -13,9 +13,17 @@ body {
   line-height: var(--base-line-height);
   transition: background-color .3s ease;
 
-  &.dark {
-    background-color: var(--dark);
-    color: var(--light-gray);
+  @media (prefers-color-scheme: light) {
+    &.dark {
+      background-color: var(--dark);
+      color: var(--light-gray);
+    }
+  }
+  @media (prefers-color-scheme: dark) {
+    &:not(.dark) {
+      background-color: var(--dark);
+      color: var(--light-gray);
+    }
   }
 
   a {
