--- a/src/sass/base/_utilities.scss
+++ b/src/sass/base/_utilities.scss
@@ -95,11 +95,15 @@
 }
 
 @mixin dark {
-  .dark & {
-    @content;
+  @media (prefers-color-scheme: light) {
+    body.dark & {
+      @content;
+    }
   }
   @media (prefers-color-scheme: dark) {
-    @content;
+    body:not(.dark) & {
+      @content;
+    }
   }
 }
 
